# SchemaX

./: .dockerignore  .env.example  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  main.py  pyproject.toml  run.bat  start.bat
alembic/: env.py
alembic/versions/: 87aa68ca45ad_initial_tables.py
api/: auth.py  users.py
api/cruds/: users.py
core/: config.py  security.py
db/: auth.py  crud.py  dependency.py  role_checker.py  sessions.py
models/: users.py
schemas/: users.py
